--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "4.9.4"
   }
 }
