--- a/package.json
+++ b/package.json
@@ -29,15 +29,24 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "aws-sdk": "^2.1303.0",
+    "cookie": "^0.5.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "next": "13.1.5",
     "next-auth": "^4.18.10",
+    "nextjs-backend-helpers": "^0.0.18-2",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/cookies": "^0.7.7",
+    "@types/uuid": "^9.0.0"
   }
 }
