--- a/package.json
+++ b/package.json
@@ -1,52 +1,59 @@
 {
-  "name": "qwerky-designs-employee-portal",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
-    "@mantine/carousel": "^5.10.2",
-    "@mantine/core": "^5.10.2",
-    "@mantine/dates": "^5.10.2",
-    "@mantine/dropzone": "^5.10.2",
-    "@mantine/form": "^5.10.2",
-    "@mantine/hooks": "^5.10.2",
-    "@mantine/next": "^5.10.2",
-    "@mantine/notifications": "^5.10.2",
-    "@mantine/prism": "^5.10.2",
-    "@mantine/tiptap": "^5.10.2",
-    "@next/font": "13.1.5",
-    "@tabler/icons": "1.119.0",
-    "@tiptap/extension-link": "^2.0.0-beta.209",
-    "@tiptap/react": "^2.0.0-beta.209",
-    "@tiptap/starter-kit": "^2.0.0-beta.209",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "aws-sdk": "^2.1303.0",
-    "cookie": "^0.5.0",
-    "dayjs": "^1.11.7",
-    "embla-carousel-react": "^7.0.9",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "next": "13.1.5",
-    "next-auth": "^4.18.10",
-    "nextjs-backend-helpers": "^0.0.18-2",
-    "openai": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
-    "typescript": "4.9.4",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/cookies": "^0.7.7",
-    "@types/uuid": "^9.0.0"
-  }
+    "name": "qwerky-designs-employee-portal",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "devold": "next dev",
+        "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/server": "^11.10.0",
+        "@mantine/carousel": "^5.10.2",
+        "@mantine/core": "^5.10.2",
+        "@mantine/dates": "^5.10.2",
+        "@mantine/dropzone": "^5.10.2",
+        "@mantine/form": "^5.10.2",
+        "@mantine/hooks": "^5.10.2",
+        "@mantine/next": "^5.10.2",
+        "@mantine/notifications": "^5.10.2",
+        "@mantine/prism": "^5.10.2",
+        "@mantine/tiptap": "^5.10.2",
+        "@next/font": "13.1.5",
+        "@tabler/icons": "1.119.0",
+        "@tiptap/extension-link": "^2.0.0-beta.209",
+        "@tiptap/react": "^2.0.0-beta.209",
+        "@tiptap/starter-kit": "^2.0.0-beta.209",
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "aws-sdk": "^2.1303.0",
+        "axios": "^1.2.6",
+        "cookie": "^0.5.0",
+        "dayjs": "^1.11.7",
+        "embla-carousel-react": "^7.0.9",
+        "eslint": "8.32.0",
+        "eslint-config-next": "13.1.5",
+        "formidable": "^2.1.1",
+        "multer": "^1.4.5-lts.1",
+        "next": "13.1.5",
+        "next-auth": "^4.18.10",
+        "next-s3-upload": "^0.2.9",
+        "nextjs-backend-helpers": "^0.0.18-2",
+        "openai": "^3.1.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-query": "^3.39.3",
+        "typescript": "4.9.4",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@types/cookies": "^0.7.7",
+        "@types/formidable": "^2.0.5",
+        "@types/uuid": "^9.0.0",
+        "cross-env": "^7.0.3"
+    }
 }
