--- a/package.json
+++ b/package.json
@@ -37,13 +37,12 @@
         "embla-carousel-react": "^7.0.9",
         "eslint": "8.32.0",
         "eslint-config-next": "13.1.5",
-        "formidable": "^2.1.1",
-        "multer": "^1.4.5-lts.1",
         "next": "13.1.5",
         "next-auth": "^4.18.10",
         "next-s3-upload": "^0.2.9",
         "nextjs-backend-helpers": "^0.0.18-2",
         "openai": "^3.1.0",
+        "query-string": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-query": "^3.39.3",
