--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@mantine/tiptap": "^5.10.2",
         "@next/font": "13.1.5",
         "@tabler/icons": "1.119.0",
+        "@tailwindcss/typography": "^0.5.9",
         "@tiptap/extension-link": "^2.0.0-beta.209",
         "@tiptap/react": "^2.0.0-beta.209",
         "@tiptap/starter-kit": "^2.0.0-beta.209",
@@ -45,7 +46,9 @@
         "query-string": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-medium-image-zoom": "^5.1.2",
         "react-query": "^3.39.3",
+        "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
         "uuid": "^9.0.0"
     },
@@ -53,6 +56,8 @@
         "@types/cookies": "^0.7.7",
         "@types/formidable": "^2.0.5",
         "@types/uuid": "^9.0.0",
-        "cross-env": "^7.0.3"
+        "autoprefixer": "^10.4.13",
+        "cross-env": "^7.0.3",
+        "postcss": "^8.4.21"
     }
 }
