--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
         "react-query": "^3.39.3",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "zod": "^3.20.6"
     },
     "devDependencies": {
         "@types/cookies": "^0.7.7",
