fix index unauthed styles and add classnames

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/react-dom": "18.0.10",
         "aws-sdk": "^2.1303.0",
         "axios": "^1.2.6",
+        "classnames": "^2.3.2",
         "cookie": "^0.5.0",
         "dayjs": "^1.11.7",
         "embla-carousel-react": "^7.0.9",
