--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "setup": "npm ci"
+        "bootstrap": "npm ci",
+        "setup": "npm run boostrap",
+        "update": "rm -rf ./node_modules && npm run bootstrap",
+        "server": "npm start",
+        "cibuild": "npm run build"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
