fix: close quotes in yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ on:
       - "**/*.md"
       - "**/*.yml"
       - "**/.gitignore"
-      - "assets/
+      - "assets/"
   workflow_dispatch:
 
 jobs:
