--- a/.env.test
+++ b/.env.test
@@ -2,15 +2,14 @@ GITHUB_CLIENT_ID=
 GITHUB_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-NEXTAUTH_SECRET=d66eea6bcf14ef4cef3fd761010593b7
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
 OPENAI_API_KEY=
-OPERATING_ENVIRONMENT=dev
+OPERATING_ENVIRONMENT=test
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
+AWS_REGION=
 PRINTIFY_API_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-DATABASE_URL="file:./dev.db"
-STRIPE_DEVICE_NAME="Fancy Fisherman"
+DATABASE_URL=
 STRIPE_API_KEY=
