add success and cancel pages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
             - 12111:12111
             - 12112:12112
         env_file:
-            - ./.env.local
+            - ./.env.development
 
     stripe-cli:
         image: stripe/stripe-cli
         container_name: stripe-cli
         command: "listen --api-key sk_test_DOESNOTEXIST --device-name Palavyr --forward-to https://localhost:3000/api/stripe/webhook --forward-connect-to http://localhost:12111 --skip-verify"
         env_file:
-            - ./.env.local
+            - ./.env.development
 
     postgres-server:
         image: postgres:14.1-alpine
@@ -28,15 +28,15 @@ services:
         volumes:
             - postgres-server:/var/lib/postgresql/data
 
-    seq:
-        image: datalust/seq:latest
-        container_name: Seq
-        restart: always
-        environment:
-            - ACCEPT_EULA=Y
-        ports:
-            - 80:80
-            - 5341:5341
+    # seq:
+    #     image: datalust/seq:latest
+    #     container_name: Seq
+    #     restart: always
+    #     environment:
+    #         - ACCEPT_EULA=Y
+    #     ports:
+    #         - 80:80
+    #         - 5341:5341
 
 volumes:
     postgres-server:
