--- a/.env.development.template
+++ b/.env.development.template
@@ -11,6 +11,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
 PRINTIFY_API_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-DATABASE_URL="file:./dev.db"
 STRIPE_DEVICE_NAME="Fancy Fisherman"
 STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET="sk_test_DOESNOTEXIST"
+DATABASE_URL="postgresql://postgres:Password01!@localhost:5432/dev"
