--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
+.env.development
 # vercel
 .vercel
 
@@ -38,3 +38,6 @@ next-env.d.ts
 
 *tfstate*
 *.terraform
+
+*.db
+
