fix: get build passing

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         "build:dev": "dotenv -e .env.development -- next build",
         "build:prd": "dotenv -e .env.production -- next build",
         "start": "next start",
-        "lint": "next lint",
+        "lint": "dotenv -e .env.development next lint",
+        "lint:fix": "dotenv -e .env.development next lint --fix",
         "bootstrap": "npm ci",
         "setup": "npm run boostrap",
         "update": "rm -rf ./node_modules && npm run bootstrap",
-        "server": "npm start",
-        "cibuild": "npm run build",
+        "server": "dotenv -e .env.production npm start",
+        "cibuild": "npm run build:prd",
         "migrate-db": "dotenv -e .env.development -- npx prisma migrate dev",
         "reset-db": "dotenv -e .env.development -- npx prisma migrate reset",
         "refresh-paul": "npm run reset-db && npm run migrate-db && npm run setup-db-paul",
