feat: make db setup generic

--- a/package.json
+++ b/package.json
@@ -7,22 +7,18 @@
         "dev": "cross-env NODE_OPTIONS='--inspect' && dotenv -e .env.development -- next dev",
         "build:dev": "dotenv -e .env.development -- next build",
         "build:prd": "dotenv -e .env.production -- next build",
-        "start": "next start",
+        "start": "dotenv -e .env.production next start",
         "lint": "dotenv -e .env.development next lint",
         "lint:fix": "dotenv -e .env.development next lint --fix",
-        "bootstrap": "npm ci",
-        "setup": "npm run boostrap",
-        "update": "rm -rf ./node_modules && npm run bootstrap",
+        "bootstrap": "npm ci && cp ./dev.config.js.template ./dev.config.js ",
+        "setup": "npm run boostrap && npm run db:dev:reset && npm run setup-db",
+        "update": "rm -rf ./node_modules && db:dev:migrate && npm run bootstrap",
         "server": "dotenv -e .env.production npm start",
         "cibuild": "npm run build:prd",
-        "migrate-db": "dotenv -e .env.development -- npx prisma migrate dev",
-        "reset-db": "dotenv -e .env.development -- npx prisma migrate reset",
-        "refresh-paul": "npm run reset-db && npm run migrate-db && npm run setup-db-paul",
-        "refresh-adam": "npm run reset-db && npm run migrate-db && npm run setup-db-adam",
-        "setup-db-paul": "node -e \"require('dotenv').config({ path: '.env.development' }); const uuid = require('uuid'); const { PrismaClient } = require('@prisma/client'); const prisma = new PrismaClient(); const data = { user_name: 'dev-user', email: 'paul.e.gradie@gmail.com', password: '12345', stripe_customer_id: 'cus_NT3Kz6yYnM6x1s', usage: { create: { available_funds: 2.0 } }}; console.log('Generated Account data:', data); prisma.account.create({ data }).then(() => { console.log('AccountData stored in the database.'); }).catch((error) => { console.error('Failed to store usage data:', error); }).finally(() => { prisma.$disconnect(); }); \"",
-        "dev-setup-paul": "npm run reset-db && npm run setup-db-paul",
-        "setup-db-adam": "node -e \"require('dotenv').config({ path: '.env.development' }); const uuid = require('uuid'); const { PrismaClient } = require('@prisma/client'); const prisma = new PrismaClient(); const data = { user_name: 'dev-user', email: 'adamb3189@gmail.com', password: '12345', stripe_customer_id: 'cus_NT3Q8CV9Ayl59L', usage: { create: { available_funds: 2.0 } }}; console.log('Generated Account data:', data); prisma.account.create({ data }).then(() => { console.log('AccountData stored in the database.'); }).catch((error) => { console.error('Failed to store usage data:', error); }).finally(() => { prisma.$disconnect(); }); \"",
-        "dev-setup-adam": "npm run reset-db && npm run setup-db-adam"
+        "db:dev:migrate": "dotenv -e .env.development -- npx prisma migrate dev",
+        "db:dev:reset": "dotenv -e .env.development -- npx prisma migrate reset",
+        "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate && npm run setup-db",
+        "setup-db": "node scripts/setup-database.js"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
