--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/server": "^11.10.0",
+        "@headlessui/react": "^1.7.13",
+        "@heroicons/react": "^2.0.16",
         "@mantine/carousel": "^5.10.2",
         "@mantine/core": "^5.10.2",
         "@mantine/dates": "^5.10.2",
@@ -60,10 +62,10 @@
         "query-string": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.8.0",
         "react-medium-image-zoom": "^5.1.2",
         "react-query": "^3.39.3",
         "stripe": "^11.13.0",
-        "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
         "zod": "^3.20.6"
     },
@@ -78,6 +80,7 @@
         "dotenv-cli": "^7.0.0",
         "postcss": "^8.4.21",
         "readline-sync": "^1.4.10",
+        "tailwindcss": "^3.2.7",
         "uuid": "^9.0.0"
     }
 }
