--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "prisma": "^4.11.0",
         "readline-sync": "^1.4.10",
         "tailwindcss": "^3.2.7",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "prettier-plugin-tailwindcss": "^0.1.13"
     }
 }
