fix: remove github app creds & update package scripts

--- a/.env.development.template
+++ b/.env.development.template
@@ -1,5 +1,5 @@
-GITHUB_CLIENT_ID='b367636a2bfbf397c7fa'
-GITHUB_CLIENT_SECRET='0d0ce9d666d97cc612f861efdc6f72ff9dd061e0'
+GITHUB_CLIENT_ID=''
+GITHUB_CLIENT_SECRET=''
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 NEXTAUTH_SECRET=d66eea6bcf14ef4cef3fd761010593b7
