--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "start": "dotenv -e .env.production next start",
         "lint": "dotenv -e .env.development next lint",
         "lint:fix": "dotenv -e .env.development next lint --fix",
-        "bootstrap": "npm ci && cp ./dev.config.js.template ./dev.config.js ",
-        "setup": "npm run boostrap && npm run db:dev:reset && npm run setup-db",
+        "bootstrap": "npm ci && cp -n ./dev.config.js.template ./dev.config.js; cp -n ./.env.development.template ./.env.development; true",
+        "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
         "update": "rm -rf ./node_modules && db:dev:migrate && npm run bootstrap",
         "server": "dotenv -e .env.production npm start",
         "cibuild": "npm run build:prd",
