--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: "3.9"
 
 services:
-    stripe:
-        image: stripe/stripe-mock:latest
-        ports:
-            - 12111:12111
-            - 12112:12112
-        env_file:
-            - ./.env.development
-
     stripe-cli:
         image: stripe/stripe-cli
         container_name: stripe-cli
-        command: "listen --api-key sk_test_DOESNOTEXIST --device-name Palavyr --forward-to https://localhost:3000/api/stripe/webhook --forward-connect-to http://localhost:12111 --skip-verify"
+        command:
+            - listen
+            - "--api-key"
+            - ${STRIPE_API_KEY}
+            - "--device-name"
+            - "Qwerky"
+            - "--forward-to"
+            - "http://localhost:3000/api/stripe/webhook"
+            - "--skip-verify"
+        network_mode: host
         env_file:
             - ./.env.development
 
@@ -20,23 +21,12 @@ services:
         image: postgres:14.1-alpine
         container_name: Database
         restart: always
-        environment:
-            - POSTGRES_USER=postgres
-            - POSTGRES_PASSWORD=Password01!
         ports:
             - 5432:5432
         volumes:
             - postgres-server:/var/lib/postgresql/data
-
-    # seq:
-    #     image: datalust/seq:latest
-    #     container_name: Seq
-    #     restart: always
-    #     environment:
-    #         - ACCEPT_EULA=Y
-    #     ports:
-    #         - 80:80
-    #         - 5341:5341
+        env_file:
+            - ./.env.development
 
 volumes:
     postgres-server:
