--- a/.env.development.template
+++ b/.env.development.template
@@ -14,6 +14,6 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_DEVICE_NAME="Fancy Fisherman"
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET="sk_test_DOESNOTEXIST"
-DATABASE_URL="postgresql://postgres:Password01!@localhost:5432/dev"
+DATABASE_URL=postgresql://postgres:Password01!@postgres-server:5432/dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Password01!
