--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "cross-env NODE_OPTIONS='--inspect' && dotenv -e .env.development -- next dev",
         "build:dev": "dotenv -e .env.development -- next build",
         "build:prd": "dotenv -e .env.production -- next build",
+        "cibuild": "next build",
         "start": "dotenv -e .env.production next start",
         "lint": "dotenv -e .env.development next lint",
         "lint:fix": "dotenv -e .env.development next lint --fix",
@@ -14,7 +15,6 @@
         "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
         "update": "rm -rf ./node_modules && db:dev:migrate && npm run bootstrap",
         "server": "dotenv -e .env.production npm start",
-        "cibuild": "npm run build:prd",
         "db:dev:migrate": "dotenv -e ./scripts/.env.external -- npx prisma migrate dev",
         "db:dev:reset": "dotenv -e ./scripts/.env.external -- npx prisma migrate reset",
         "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate && npm run setup-db",
