Add initial db schemas, stripe, webhook handling, checkout sessions, product id, and minimal ui (#11)
* move terraform

* add docker compose

* add success and cancel pages

* feat: refactor and comments

* feat: get dotenv-cli added and new server & client schemas

* fix: add config for local config values such as db email

* feat: first pass at studio redesign using tailwind

* fix: remove github app creds & update package scripts

* dockerize

* fix: get build passing and github_client_secret synced

* use external env for db

* working webhook solution
---------

Co-authored-by: Adam Beck <adamb3189@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,10 @@ jobs:
     - name: Run CI build
       env:
         GITHUB_CLIENT_ID: dummy-value
-        GITHUB_SECRET: dummy-value
+        GITHUB_CLIENT_SECRET: dummy-value
         NEXTAUTH_URL: dummy-value
         NEXTAUTH_SECRET: dummy-value
         NODE_ENV: production
+        STRIPE_DEVICE_NAME: dummy-value
+        STRIPE_WEBHOOK_SECRET: dummy-value
       run: npm run cibuild
