--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
     "private": true,
     "scripts": {
         "devold": "next dev",
-        "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "bootstrap": "npm ci",
-        "setup": "npm run boostrap",
-        "update": "rm -rf ./node_modules && npm run bootstrap",
-        "server": "npm start",
-        "cibuild": "npm run build"
+        "dev": "cross-env NODE_OPTIONS='--inspect' && dotenv -e .env.development -- next dev",
+        "build:dev": "dotenv -e .env.development -- next build",
+        "build:prd": "dotenv -e .env.production -- next build",
+        "cibuild": "next build",
+        "start": "dotenv -e .env.production next start",
+        "lint": "dotenv -e .env.development next lint",
+        "lint:fix": "dotenv -e .env.development next lint --fix",
+        "bootstrap": "npm ci && cp -n ./dev.config.js.template ./dev.config.js; cp -n ./.env.development.template ./.env.development; true",
+        "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
+        "update": "rm -rf ./node_modules && db:dev:migrate && npm run bootstrap",
+        "server": "dotenv -e .env.production npm start",
+        "db:dev:migrate": "dotenv -e ./scripts/.env.external -- npx prisma migrate dev",
+        "db:dev:reset": "dotenv -e ./scripts/.env.external -- npx prisma migrate reset",
+        "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate && npm run setup-db",
+        "setup-db": "node scripts/setup-database.js",
+        "dev-setup": "docker compose up --build -d && npm run db:dev:refresh"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/server": "^11.10.0",
+        "@headlessui/react": "^1.7.13",
+        "@heroicons/react": "^2.0.16",
         "@mantine/carousel": "^5.10.2",
         "@mantine/core": "^5.10.2",
         "@mantine/dates": "^5.10.2",
@@ -28,6 +37,8 @@
         "@mantine/prism": "^5.10.2",
         "@mantine/tiptap": "^5.10.2",
         "@next/font": "13.1.5",
+        "@prisma/client": "^4.11.0",
+        "@stripe/stripe-js": "^1.48.0",
         "@tabler/icons": "1.119.0",
         "@tailwindcss/typography": "^0.5.9",
         "@tiptap/extension-link": "^2.0.0-beta.209",
@@ -52,19 +63,26 @@
         "query-string": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.8.0",
         "react-medium-image-zoom": "^5.1.2",
         "react-query": "^3.39.3",
-        "tailwindcss": "^3.2.4",
+        "stripe": "^11.13.0",
         "typescript": "4.9.4",
-        "uuid": "^9.0.0",
         "zod": "^3.20.6"
     },
     "devDependencies": {
         "@types/cookies": "^0.7.7",
         "@types/formidable": "^2.0.5",
+        "@types/stripe": "^8.0.417",
         "@types/uuid": "^9.0.0",
         "autoprefixer": "^10.4.13",
         "cross-env": "^7.0.3",
-        "postcss": "^8.4.21"
+        "dotenv": "^16.0.3",
+        "dotenv-cli": "^7.0.0",
+        "postcss": "^8.4.21",
+        "prisma": "^4.11.0",
+        "readline-sync": "^1.4.10",
+        "tailwindcss": "^3.2.7",
+        "uuid": "^9.0.0"
     }
 }
