--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "db:dev:reset": "dotenv -e ./scripts/.env.external -- npx prisma migrate reset",
         "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate && npm run setup-db",
         "setup-db": "node scripts/setup-database.js",
-        "dev-setup": "docker compose up --build -d && npm run db:dev:refresh"
+        "delete_node_modules": "npm i -g rimraf && rimraf node_modules",
+        "dev-setup": "npm run delete_node_modules && docker compose up --build -d && npm run db:dev:refresh"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
@@ -40,6 +41,7 @@
         "@prisma/client": "^4.11.0",
         "@stripe/stripe-js": "^1.48.0",
         "@tabler/icons": "1.119.0",
+        "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
         "@tiptap/extension-link": "^2.0.0-beta.209",
         "@tiptap/react": "^2.0.0-beta.209",
@@ -47,26 +49,32 @@
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
+        "autoprefixer": "^10.4.12",
         "aws-sdk": "^2.1303.0",
         "axios": "^1.2.6",
         "classnames": "^2.3.2",
+        "clsx": "^1.2.1",
         "cookie": "^0.5.0",
         "dayjs": "^1.11.7",
         "embla-carousel-react": "^7.0.9",
         "eslint": "8.32.0",
         "eslint-config-next": "13.1.5",
+        "focus-visible": "^5.2.0",
         "next": "13.1.5",
         "next-auth": "^4.18.10",
         "next-s3-upload": "^0.2.9",
         "nextjs-backend-helpers": "^0.0.18-7",
         "openai": "^3.1.0",
+        "postcss-focus-visible": "^6.0.4",
         "query-string": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.8.0",
         "react-medium-image-zoom": "^5.1.2",
         "react-query": "^3.39.3",
+        "rimraf": "^4.3.1",
         "stripe": "^11.13.0",
+        "tailwindcss": "^3.2.1",
         "typescript": "4.9.4",
         "zod": "^3.20.6"
     },
@@ -79,11 +87,14 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.3",
         "dotenv-cli": "^7.0.0",
+        "eslint": "8.26.0",
+        "eslint-config-next": "13.0.2",
         "postcss": "^8.4.21",
+        "prettier": "^2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
         "prisma": "^4.11.0",
         "readline-sync": "^1.4.10",
         "tailwindcss": "^3.2.7",
-        "uuid": "^9.0.0",
-        "prettier-plugin-tailwindcss": "^0.1.13"
+        "uuid": "^9.0.0"
     }
 }
