--- a/.env.development.template
+++ b/.env.development.template
@@ -6,6 +6,7 @@ NEXTAUTH_SECRET=d66eea6bcf14ef4cef3fd761010593b7
 NEXTAUTH_URL=http://localhost:3000
 OPENAI_API_KEY=
 OPERATING_ENVIRONMENT=dev
+NEXT_PUBLIC_OPERATING_ENVIRONMENT=dev
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
