--- a/.env.production
+++ b/.env.production
@@ -12,6 +12,7 @@ NEXTAUTH_SECRET=
 NEXTAUTH_URL=
 OPENAI_API_KEY=
 OPERATING_ENVIRONMENT=prod
+NEXT_PUBLIC_OPERATING_ENVIRONMENT=prod
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
