--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install prettier
         run: npm i -g prettier
 
+      - name: Install prettier-plugin-tailwindcss
+        run: npm i -g prettier-plugin-tailwindcss
+
       - name: Prettify code
         uses: creyD/prettier_action@v4.2
         with:
