--- a/.env.development.template
+++ b/.env.development.template
@@ -18,3 +18,4 @@ STRIPE_WEBHOOK_SECRET="sk_test_DOESNOTEXIST"
 DATABASE_URL=postgresql://postgres:Password01!@postgres-server:5432/dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Password01!
+NODE_ENV='development'
