--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "@types/formidable": "^2.0.5",
         "@types/stripe": "^8.0.417",
         "@types/uuid": "^9.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
         "autoprefixer": "^10.4.13",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.3",
