refactor to modules

--- a/.env.development.template
+++ b/.env.development.template
@@ -10,7 +10,6 @@ NEXT_PUBLIC_OPERATING_ENVIRONMENT=dev
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
-PRINTIFY_API_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_DEVICE_NAME="Fancy Fisherman"
 STRIPE_API_KEY=
@@ -18,3 +17,5 @@ STRIPE_WEBHOOK_SECRET="sk_test_DOESNOTEXIST"
 DATABASE_URL=postgresql://postgres:Password01!@postgres-server:5432/dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Password01!
+IMAGE_STORE_BUCKET=qd-uploads-and-transfers-dev
+ARCHIVE_STORE_BUCKET=qd-archived-images-dev
