--- a/.env.production
+++ b/.env.production
@@ -5,15 +5,15 @@ GOOGLE_CLIENT_SECRET=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=
 OPENAI_API_KEY=
-OPERATING_ENVIRONMENT=prod
-NEXT_PUBLIC_OPERATING_ENVIRONMENT=prod
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
-PRINTIFY_API_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_API_KEY=
 DATABASE_URL=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+IMAGE_STORE_BUCKET=
+ARCHIVE_STORE_BUCKET=
+NEXT_PUBLIC_IS_PROD=true
