fix: get username and password auth working also alot of other things

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "build:prd": "dotenv -e .env.production -- next build",
         "cibuild": "next build",
         "start": "dotenv -e .env.production next start",
-        "lint": "dotenv -e .env.development next lint",
-        "lint:fix": "npx eslint . --fix",
+        "lint": "dotenv -e .env.development next lint && npm run prettify",
+        "lint:fix": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
         "prettify": "npx prettier -w --config ./prettier.config.js .",
         "bootstrap": "npm ci && cp -n ./dev.config.js.template ./dev.config.js; cp -n ./.env.development.template ./.env.development; true",
         "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
@@ -95,6 +95,7 @@
         "dotenv-cli": "^7.1.0",
         "eslint": "8.26.0",
         "eslint-config-next": "13.0.2",
+        "eslint-plugin-tailwindcss": "^3.10.1",
         "postcss": "^8.4.21",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
