--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,16 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        // "tailwind.config.js",
+        // ".eslintrc.js",
+        // "dev.config.js",
+        // "postcss.config.js",
+        // "prettier.config.js",
+        // "setup-database.js"
+    ],
     "exclude": ["node_modules"]
 }
