--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "qwerky-designs-employee-portal",
+    "name": "qwerky-studio",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -9,8 +9,8 @@
         "build:prd": "dotenv -e .env.production -- next build",
         "cibuild": "next build",
         "start": "dotenv -e .env.production next start",
-        "lint": "dotenv -e .env.development next lint",
-        "lint:fix": "npx eslint . --fix",
+        "lint": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
+        "lint:fix": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
         "prettify": "npx prettier -w --config ./prettier.config.js .",
         "bootstrap": "npm ci && cp -n ./dev.config.js.template ./dev.config.js; cp -n ./.env.development.template ./.env.development; true",
         "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
@@ -62,7 +62,6 @@
         "cookie": "^0.5.0",
         "dayjs": "^1.11.7",
         "embla-carousel-react": "^7.0.9",
-        "eslint": "8.32.0",
         "eslint-config-next": "13.1.5",
         "focus-visible": "^5.2.0",
         "next": "13.1.5",
@@ -89,12 +88,14 @@
         "@types/stripe": "^8.0.417",
         "@types/uuid": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.57.0",
         "autoprefixer": "^10.4.13",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.3",
         "dotenv-cli": "^7.1.0",
-        "eslint": "8.26.0",
+        "eslint": "^8.26.0",
         "eslint-config-next": "13.0.2",
+        "eslint-plugin-tailwindcss": "^3.10.1",
         "postcss": "^8.4.21",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
