--- a/.env.production
+++ b/.env.production
@@ -1,19 +1,21 @@
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
-OPENAI_API_KEY=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-STRIPE_WEBHOOK_SECRET=
-STRIPE_API_KEY=
-DATABASE_URL=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-IMAGE_STORE_BUCKET=
-ARCHIVE_STORE_BUCKET=
+GITHUB_CLIENT_ID="#{GITHUB_CLIENT_ID}"
+GITHUB_CLIENT_SECRET="#{GITHUB_CLIENT_SECRET}"
+GOOGLE_CLIENT_ID="#{GOOGLE_CLIENT_ID}"
+GOOGLE_CLIENT_SECRET="#{GOOGLE_CLIENT_SECRET}"
+NEXTAUTH_SECRET="#{NEXTAUTH_SECRET}"
+NEXTAUTH_URL="#{NEXTAUTH_URL}"
+OPENAI_API_KEY="#{OPENAI_API_KEY}"
+AWS_ACCESS_KEY_ID="#{AWS_ACCESS_KEY_ID}"
+AWS_SECRET_ACCESS_KEY="#{AWS_SECRET_ACCESS_KEY}"
+AWS_REGION="#{AWS_REGION}"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="#{NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}"
+STRIPE_WEBHOOK_SECRET="#{STRIPE_WEBHOOK_SECRET}"
+STRIPE_API_KEY="#{STRIPE_API_KEY}"
+DATABASE_URL="#{DATABASE_URL}"
+POSTGRES_USER="#{POSTGRES_USER}"
+POSTGRES_PASSWORD="#{POSTGRES_PASSWORD}"
+IMAGE_STORE_BUCKET="#{IMAGE_STORE_BUCKET}"
+ARCHIVE_STORE_BUCKET="#{ARCHIVE_STORE_BUCKET}"
 NEXT_PUBLIC_IS_PROD=true
+
+
