--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "cross-env NODE_OPTIONS='--inspect' && dotenv -e .env.development -- next dev",
         "build:dev": "dotenv -e .env.development -- next build",
         "build:prd": "dotenv -e .env.production -- next build",
-        "cibuild": "next build",
+        "cibuild": "next build studio_build",
         "start": "dotenv -e .env.production next start",
         "lint": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
         "lint:fix": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
@@ -38,11 +38,9 @@
         "@mantine/notifications": "^5.10.2",
         "@mantine/prism": "^5.10.2",
         "@mantine/tiptap": "^5.10.2",
-        "@mdx-js/loader": "^2.3.0",
-        "@mdx-js/react": "^2.3.0",
+        "@next-auth/prisma-adapter": "^1.0.5",
         "@next/font": "13.1.5",
-        "@next/mdx": "^13.2.4",
-        "@prisma/client": "^4.11.0",
+        "@prisma/client": "^4.12.0",
         "@stripe/stripe-js": "^1.48.0",
         "@tabler/icons": "1.119.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -57,6 +55,7 @@
         "autoprefixer": "^10.4.12",
         "aws-sdk": "^2.1303.0",
         "axios": "^1.2.6",
+        "bcrypt": "^5.1.0",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
@@ -65,7 +64,7 @@
         "eslint-config-next": "13.1.5",
         "focus-visible": "^5.2.0",
         "next": "13.1.5",
-        "next-auth": "^4.18.10",
+        "next-auth": "^4.20.1",
         "next-s3-upload": "^0.2.9",
         "nextjs-backend-helpers": "^0.0.18-7",
         "openai": "^3.1.0",
@@ -83,8 +82,8 @@
         "zod": "^3.20.6"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cookies": "^0.7.7",
-        "@types/formidable": "^2.0.5",
         "@types/stripe": "^8.0.417",
         "@types/uuid": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
@@ -99,7 +98,7 @@
         "postcss": "^8.4.21",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "prisma": "^4.11.0",
+        "prisma": "^4.12.0",
         "readline-sync": "^1.4.10",
         "tailwindcss": "^3.2.7",
         "uuid": "^9.0.0"
