--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
         "@tiptap/extension-link": "^2.0.0-beta.209",
         "@tiptap/react": "^2.0.0-beta.209",
         "@tiptap/starter-kit": "^2.0.0-beta.209",
+        "@types/bcryptjs": "^2.4.2",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
         "autoprefixer": "^10.4.12",
         "aws-sdk": "^2.1303.0",
         "axios": "^1.2.6",
-        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
@@ -82,7 +83,6 @@
         "zod": "^3.20.6"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
         "@types/cookies": "^0.7.7",
         "@types/stripe": "^8.0.417",
         "@types/uuid": "^9.0.0",
