--- a/.env.production
+++ b/.env.production
@@ -17,5 +17,5 @@ POSTGRES_PASSWORD="#{POSTGRES_PASSWORD}"
 IMAGE_STORE_BUCKET="#{IMAGE_STORE_BUCKET}"
 ARCHIVE_STORE_BUCKET="#{ARCHIVE_STORE_BUCKET}"
 NEXT_PUBLIC_IS_PROD=true
-
+JWT_SECRET=afcxWrRByVGKegtf0VM257I_WCy_06qtG1lecV3HAQLyNPIwgrtLI9rXDDmcpVu8HI9ReiL0QOx90EUT4zA3cg
 
