--- a/package.json
+++ b/package.json
@@ -24,83 +24,84 @@
         "dev-setup": "npm run delete_node_modules && docker compose up --build -d && npm i -D dotenv && npm run db:dev:refresh"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
+        "@emotion/react": "^11.10.6",
         "@emotion/server": "^11.10.0",
         "@headlessui/react": "^1.7.13",
-        "@heroicons/react": "^2.0.16",
-        "@mantine/carousel": "^5.10.2",
-        "@mantine/core": "^5.10.2",
-        "@mantine/dates": "^5.10.2",
-        "@mantine/dropzone": "^5.10.2",
-        "@mantine/form": "^5.10.2",
-        "@mantine/hooks": "^5.10.2",
-        "@mantine/next": "^5.10.2",
-        "@mantine/notifications": "^5.10.2",
-        "@mantine/prism": "^5.10.2",
-        "@mantine/tiptap": "^5.10.2",
+        "@heroicons/react": "^2.0.17",
+        "@mantine/carousel": "^6.0.7",
+        "@mantine/core": "^6.0.7",
+        "@mantine/dates": "^6.0.7",
+        "@mantine/dropzone": "^6.0.7",
+        "@mantine/form": "^6.0.7",
+        "@mantine/hooks": "^6.0.7",
+        "@mantine/next": "^6.0.7",
+        "@mantine/notifications": "^6.0.7",
+        "@mantine/prism": "^6.0.7",
+        "@mantine/tiptap": "^6.0.7",
         "@next-auth/prisma-adapter": "^1.0.5",
-        "@next/font": "13.1.5",
+        "@next/font": "13.3.0",
         "@prisma/client": "^4.12.0",
-        "@stripe/stripe-js": "^1.48.0",
-        "@tabler/icons": "1.119.0",
+        "@stripe/stripe-js": "^1.52.1",
+        "@tabler/icons": "2.15.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
-        "@tiptap/extension-link": "^2.0.0-beta.209",
-        "@tiptap/react": "^2.0.0-beta.209",
-        "@tiptap/starter-kit": "^2.0.0-beta.209",
+        "@tiptap/extension-link": "^2.0.2",
+        "@tiptap/react": "^2.0.2",
+        "@tiptap/starter-kit": "^2.0.2",
         "@types/bcryptjs": "^2.4.2",
-        "@types/node": "18.11.18",
-        "@types/react": "18.0.27",
-        "@types/react-dom": "18.0.10",
-        "autoprefixer": "^10.4.12",
-        "aws-sdk": "^2.1303.0",
-        "axios": "^1.2.6",
+        "@types/node": "18.15.11",
+        "@types/react": "18.0.35",
+        "@types/react-dom": "18.0.11",
+        "autoprefixer": "^10.4.14",
+        "aws-sdk": "^2.1356.0",
+        "axios": "^1.3.5",
         "bcryptjs": "^2.4.3",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
         "dayjs": "^1.11.7",
-        "embla-carousel-react": "^7.0.9",
-        "eslint-config-next": "13.1.5",
+        "embla-carousel-react": "^7.1.0",
+        "eslint-config-next": "13.3.0",
         "focus-visible": "^5.2.0",
-        "next": "13.1.5",
-        "next-auth": "^4.20.1",
-        "next-s3-upload": "^0.2.9",
-        "nextjs-backend-helpers": "^0.0.18-7",
-        "openai": "^3.1.0",
-        "postcss-focus-visible": "^6.0.4",
-        "prisma": "^4.12.0",
+        "next": "12.3.x",
+        "next-auth": "^4.22.0",
+        "next-s3-upload": "^0.3.0",
+        "nextjs-backend-helpers": "^0.0.18-8",
+        "openai": "^3.2.1",
+        "postcss-focus-visible": "^8.0.2",
         "query-string": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.8.0",
-        "react-medium-image-zoom": "^5.1.2",
+        "react-medium-image-zoom": "^5.1.3",
         "react-query": "^3.39.3",
-        "stripe": "^11.13.0",
-        "tailwindcss": "^3.2.1",
-        "zod": "^3.20.6"
+        "stripe": "^12.0.0",
+        "tailwindcss": "^3.3.1",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/cookies": "^0.7.7",
         "@types/stripe": "^8.0.417",
-        "@types/uuid": "^9.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.54.1",
-        "@typescript-eslint/parser": "^5.57.0",
-        "autoprefixer": "^10.4.13",
+        "@types/uuid": "^9.0.1",
+        "@typescript-eslint/eslint-plugin": "^5.58.0",
+        "@typescript-eslint/parser": "^5.58.0",
+        "autoprefixer": "^10.4.14",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.3",
-        "dotenv-cli": "^7.1.0",
-        "eslint": "^8.26.0",
-        "eslint-config-next": "13.0.2",
-        "eslint-plugin-tailwindcss": "^3.10.1",
+        "dotenv-cli": "^7.2.1",
+        "eslint": "^8.38.0",
+        "eslint-config-next": "13.3.0",
+        "eslint-plugin-tailwindcss": "^3.11.0",
+        "jose": "^4.13.1",
         "postcss": "^8.4.21",
-        "prettier": "^2.7.1",
-        "prettier-plugin-tailwindcss": "^0.1.13",
+        "prettier": "^2.8.7",
+        "prettier-plugin-tailwindcss": "^0.2.7",
+        "prisma": "^4.12.0",
         "readline-sync": "^1.4.10",
-        "rimraf": "^4.3.1",
-        "tailwindcss": "^3.2.7",
-        "typescript": "4.9.4",
+        "rimraf": "^5.0.0",
+        "tailwindcss": "^3.3.1",
+        "typescript": "5.0.4",
         "uuid": "^9.0.0"
     }
 }
