login using credentials

--- a/.env.development.template
+++ b/.env.development.template
@@ -12,7 +12,7 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_DEVICE_NAME="Fancy Fisherman"
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET="sk_test_DOESNOTEXIST"
-DATABASE_URL=postgresql://postgres:Password01!@postgres-server:5432/dev
+DATABASE_URL=postgresql://postgres:Password01!@host.docker.internal:5432/dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Password01!
 IMAGE_STORE_BUCKET=qd-uploads-and-transfers-dev
