--- a/.env.development.template
+++ b/.env.development.template
@@ -2,17 +2,18 @@ GITHUB_CLIENT_ID=''
 GITHUB_CLIENT_SECRET=''
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-NEXTAUTH_SECRET=d66eea6bcf14ef4cef3fd761010593b7
-NEXTAUTH_URL=http://localhost:3000
 OPENAI_API_KEY=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-STRIPE_DEVICE_NAME="Fancy Fisherman"
 STRIPE_API_KEY=
+AWS_REGION=us-east-1
+NEXTAUTH_SECRET=evGx9VxXS6wsyCaBXNOMyDuAknXlNBcggA2h7O9zWgw=
+NEXTAUTH_URL=http://localhost:3000
+JWT_SECRET=Y2lBb3ZPU-f-dFVU_A9djnywMGoimi323WWTQANKfNPNcXmX3JZohwlSTLvi2y3Qx-Mgupyy88e1FoaU0b78QQ
+STRIPE_DEVICE_NAME="Fancy Fisherman"
 STRIPE_WEBHOOK_SECRET="sk_test_DOESNOTEXIST"
-DATABASE_URL=postgresql://postgres:Password01!@host.docker.internal:5432/dev
+DATABASE_URL=postgresql://postgres:Password01!@localhost:5432/dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Password01!
 IMAGE_STORE_BUCKET=qd-uploads-and-transfers-dev
