--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
         "lint:fix": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
         "prettify": "npx prettier -w --config ./prettier.config.js .",
         "bootstrap": "npm ci && cp -n ./dev.config.js.template ./dev.config.js; cp -n ./.env.development.template ./.env.development; true",
-        "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
+        "setup": "npm run bootstrap && npm run db:dev:reset",
         "update": "rm -rf ./node_modules && npm run bootstrap && npm run db:dev:migrate ",
         "server": "dotenv -e .env.production npm start",
-        "db:dev:migrate": "npx dotenv -e ./scripts/.env.external -- npx prisma migrate dev",
-        "db:dev:reset": "npx dotenv -e ./scripts/.env.external -- npx prisma migrate reset",
-        "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate && npm run setup-db",
-        "setup-db": "node scripts/setup-database.js",
+        "db:dev:migrate": "npx dotenv -e ./.env.development -- npx prisma migrate dev",
+        "db:dev:reset": "npx dotenv -e ./.env.development -- npx prisma migrate reset",
+        "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate",
         "delete_node_modules": "npm i -g rimraf && rimraf node_modules",
         "dev-setup": "npm run delete_node_modules && docker compose up --build -d && npm i -D dotenv && npm run db:dev:refresh"
     },
