--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "db:dev:reset": "npx dotenv -e ./.env.development -- npx prisma migrate reset",
         "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate",
         "delete_node_modules": "npm i -g rimraf && rimraf node_modules",
-        "dev-setup": "npm run delete_node_modules && docker compose up --build -d && npm i -D dotenv && npm run db:dev:refresh"
+        "dev-setup": "npm run delete_node_modules && npm i && docker compose up --build -d && npm i -D dotenv && npm run db:dev:refresh"
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -41,7 +41,7 @@
         "@next/font": "13.3.0",
         "@prisma/client": "^4.12.0",
         "@stripe/stripe-js": "^1.52.1",
-        "@tabler/icons": "2.15.0",
+        "@tabler/icons-react": "^2.16.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
@@ -63,10 +63,10 @@
         "embla-carousel-react": "^7.1.0",
         "eslint-config-next": "13.3.0",
         "focus-visible": "^5.2.0",
-        "next": "12.3.x",
-        "next-auth": "^4.22.0",
+        "next": "^13.3.0",
+        "next-auth": "^4.18.10",
         "next-s3-upload": "^0.3.0",
-        "nextjs-backend-helpers": "^0.0.18-8",
+        "nextjs-backend-helpers": "^0.0.18-9",
         "openai": "^3.2.1",
         "postcss-focus-visible": "^8.0.2",
         "query-string": "^8.1.0",
