Fix Auth and update packages to make prisma and nextauth work happily toghether (#37)
*fix:upgrade to next13 and backend helpers to correct auth

--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
         "lint:fix": "npx eslint ./src/**/*.ts* --fix && npm run prettify",
         "prettify": "npx prettier -w --config ./prettier.config.js .",
         "bootstrap": "npm ci && cp -n ./dev.config.js.template ./dev.config.js; cp -n ./.env.development.template ./.env.development; true",
-        "setup": "npm run bootstrap && npm run db:dev:reset && npm run setup-db",
+        "setup": "npm run bootstrap && npm run db:dev:reset",
         "update": "rm -rf ./node_modules && npm run bootstrap && npm run db:dev:migrate ",
         "server": "dotenv -e .env.production npm start",
-        "db:dev:migrate": "npx dotenv -e ./scripts/.env.external -- npx prisma migrate dev",
-        "db:dev:reset": "npx dotenv -e ./scripts/.env.external -- npx prisma migrate reset",
-        "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate && npm run setup-db",
-        "setup-db": "node scripts/setup-database.js",
+        "db:dev:migrate": "npx dotenv -e ./.env.development -- npx prisma migrate dev",
+        "db:dev:reset": "npx dotenv -e ./.env.development -- npx prisma migrate reset",
+        "db:dev:refresh": "npm run db:dev:reset && npm run db:dev:migrate",
         "delete_node_modules": "npm i -g rimraf && rimraf node_modules",
-        "dev-setup": "npm run delete_node_modules && docker compose up --build -d && npm i -D dotenv && npm run db:dev:refresh"
+        "dev-setup": "npm run delete_node_modules && npm i && docker compose up --build -d && npm i -D dotenv && npm run db:dev:refresh"
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -42,7 +41,7 @@
         "@next/font": "13.3.0",
         "@prisma/client": "^4.12.0",
         "@stripe/stripe-js": "^1.52.1",
-        "@tabler/icons": "2.15.0",
+        "@tabler/icons-react": "^2.16.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
@@ -64,10 +63,10 @@
         "embla-carousel-react": "^7.1.0",
         "eslint-config-next": "13.3.0",
         "focus-visible": "^5.2.0",
-        "next": "12.3.x",
-        "next-auth": "^4.22.0",
+        "next": "^13.3.0",
+        "next-auth": "^4.18.10",
         "next-s3-upload": "^0.3.0",
-        "nextjs-backend-helpers": "^0.0.18-8",
+        "nextjs-backend-helpers": "^0.0.18-9",
         "openai": "^3.2.1",
         "postcss-focus-visible": "^8.0.2",
         "query-string": "^8.1.0",
